--- a/BulkyBook/Views/Shared/_Layout.cshtml
+++ b/BulkyBook/Views/Shared/_Layout.cshtml
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="~/css/datatables.min.css">
     <link rel="stylesheet" href="~/css/jquery-ui.min.css">
     <link rel="stylesheet" href="~/css/toastr.min.css">
+    @* <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" /> *@
 </head>
 <body>
     <header>
@@ -43,6 +46,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
                             </div>
                         </li>
                     </ul>
@@ -70,6 +74,11 @@
     <script src="~/js/toastr.min.js"></script>
     <script src="~/js/sweetalert2.js"></script>
     <script src="~/js/font-awesome.js"></script>
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://kit.fontawesome.com/e19c476714.js"></script> *@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
