--- a/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
@@ -1,3 +1,4 @@
+@model BulkyBook.Models.ViewModels.CategoryVM
 
 <br />
     <div class="row">
@@ -10,7 +11,74 @@
     </div>
 
 <br />
+
 <div class="p-4 border rounded">
+    @if (Model.Categories.Count() > 0)
+    {
+        <table class="table table-striped border">
+            <tr class="table-secondary">
+                <th>Category Name</th>
+                <th></th>
+            </tr>
+            @foreach (var item in Model.Categories)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(m => item.Name)
+                    </td>
+                    <td>
+                        <a href="/Admin/Category/Upsert/@item.Id" class="btn btn-success text-white" style="cursor: pointer;">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            &nbsp;
+                            <button onclick=Delete("/Admin/Category/Delete/@item.Id") class="btn btn-danger text-white" style="cursor: pointer;">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                    </td>
+                </tr>
+            }
+        </table>
+        <div page-model="@Model.PagingInfo" page-classes-enabled="true" page-class="btn border"
+            page-class-normal="btn btn-light" page-class-selected="btn btn-info active" 
+            class="btn-group float-end"></div>
+        <br>
+    }
+    else
+    {
+        <p>No Categories Exists.</p>
+    }
+</div>
+
+@section Scripts {
+    <script>
+        function Delete(url) {
+            new swal({
+                title: "Are you sure you want to delete?",
+                text: "You will not be able to restore the data!",
+                icon: "warning",
+                showCancelButton: true,
+                dangerMode: true
+            }).then((willDelete) => {
+                if (willDelete) {
+                    $.ajax({
+                        type: "DELETE",
+                        url: url,
+                        success: function(data) {
+                            location.reload();
+                        }
+                    })
+                }
+            });
+        }
+    </script>
+}
+
+
+
+
+
+
+@* <div class="p-4 border rounded">
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
@@ -23,4 +91,4 @@
 
 @section Scripts{
     <script src="~/js/category.js"></script>
-}
+} *@
